Bugfixes (#32)
* fixed replayValue not being shown

* fixed text not overflowing correctly

* Moved Disco ball to background

* changed to absolute path

* Made The Council in navbar lead to home page

* Fixed Gradient stopping scrolling

* Fixed mobile button opacity

* fixed the navbar mobile menu

* added key

* navbar bug

* button bug

* made council reply responsive

* uneeded css

* Fixed Navbar error

* Update Navlink.tsx

* fixed double click bug

* Extracted Suibmit button to its own component

* Fixed loading screen

* Fixed image link

* Text Fixes

* Change submit icons

* Made council page responsive

* fixed finale formatting

* last fixes

* Added Quota Limit checking for API

* added hard query constant

* fixed mobile scroll issues

* scroll

* fixed more details page

--- a/app/global.css
+++ b/app/global.css
@@ -392,7 +392,7 @@ background-size: cover; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	overflow: hidden;
+	overflow-y: auto;
 }
 
 .pop-up-content {
